# lunaricorn

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint-and-security.yml
agents/eve_loader/: jita_loader.py  requirements.txt  run.sh
agents/rss_loader/: __init__.py  rss_loader_client.py
doc/: ARCHITECTURE.md  CHANGELOG.md  PROBLEMS.md  ROADMAP.md  SIGNALING_TEST_ANALYSIS.md  STATUS.md  orb.md
images/: build.sh  cpp_builder.Dockerfile
lunaricorn/: __init__.py  pyproject.toml  requirements.txt
lunaricorn/api/: __init__.py
lunaricorn/api/leader/: __init__.py  connector.py
lunaricorn/api/orb/: Dockerfile  __init__.py  client.py  datastorage.proto  datastorage_pb2.py  datastorage_pb2_grpc.py  update_grpc.sh
lunaricorn/api/signaling/: __init__.py  client.py
lunaricorn/cpp/: CMakeLists.txt  config.cpp  config.h  event_data.cpp  event_data.h  leader_api.cpp  leader_api.h  lunaricorn.cpp  lunaricorn.h  maintenance.cpp  maintenance.h  mlog.cpp  node_controller.h  signaling_api.cpp  signaling_api.h  signaling_api_events.cpp  stdafx.h
lunaricorn/cpp/internal/: thread_control.cpp  thread_control.h
lunaricorn/cpp/proto/: signaling.cpp  signaling.h
lunaricorn/data/: __init__.py  convertor.py
lunaricorn/net/: __init__.py  apt_requirements.txt  content_loader.py  content_type.py  data_dumper.py  func.py  net_config.py
lunaricorn/net/rss/: __init__.py  rss_loader.py
lunaricorn/types/: __init__.py  object.py  orb_data_object.py  orb_meta_object.py
lunaricorn/utils/: __init__.py  db_manager.py  logger_config.py  maintenance.py  maintenance_http.py  maintenance_pika.py  maintenance_utils.py
notebooks/: 20250709_212127_283.md  =5.27.0  apiTest.ipynb  eve_market.ipynb  forge_test.ipynb  maintenance_test.ipynb  orbApiTest.ipynb  playground_test.ipynb  rss.ipynb  rss2.ipynb  rss_autodump.py  rss_dumps.txt  rss_entries_342b6a7ce1d78ed7.db  signalingApiTest.ipynb
notebooks/orb_test/: Dockerfile.app  Dockerfile.base  build_base.sh  it.sh  orb_test.py  requirements.txt  run.sh
notebooks/tmp/: index.db  index.db-shm  index.db-wal
notebooks/tmp/ke/: index.db
services/: .env.example  build.sh  build_base.sh  docker-compose.yaml  down.sh  leader_up.sh  orb_up.sh  portal_up.sh  signaling_up.sh  up.sh
services/api_examples/leader/: common.http
services/api_examples/signaling/: browse.http  common.http  list.http
services/data/loki/: local-config.yaml
services/data/pg/: Dockerfile  init-db.sh  postgresql.conf  rebuild_image.sh  setup.sh
services/leader/: Dockerfile  Dockerfile.base  build.sh  it.sh  leader_app.py  make_app.sh  make_base.sh  pyproject.toml  requirements.txt  run.sh  test.sh
services/leader/app/: endpoint.cpp
services/leader/initial_data/: cluster_config.yaml  known_nodes.db  known_nodes.db-shm  known_nodes.db-wal  leader_config.yaml
services/leader/internal/: __init__.py  db_manager.py  discover.py  discover_pg.py  discover_sqlite.py  leader.py  leader_databasemanager.py
services/leader_cpp/: Dockerfile  it.sh  make_app.sh
services/leader_cpp/app/: CMakeLists.txt  build.sh  endpoint.cpp  endpoint.h  leader.cpp  leader.h  main.cpp  stdafx.h
services/leader_cpp/example_data/: leader_config.yaml
services/maintenance/: ,gitignore  Dockerfile  Dockerfile.base  app.py  build.sh  consumer.py  it.sh  lunaricorn_maintenance.txt  make_app.sh  make_base.sh  orchestrator.py  producer.py  rabbitmq.conf  requirements.txt  storage.py
services/maintenance-cpp/: Dockerfile  Dockerfile.base  api.md  it.sh  make_app.sh  make_base.sh
services/maintenance-cpp/app/: CMakeLists.txt  build.sh  endpoint.cpp  endpoint.h  main.cpp  pusher.cpp  pusher.h  storage.cpp  storage.h
services/maintenance-cpp/tmp/: lunaricorn.tgz
services/maintenance-simple/: Dockerfile  consumer.py  make_base.sh  rabbitmq.conf
services/maintenance/app/: endpoint.cpp  endpoint.h  storage.h
services/orb/: .gitignore  .native_env_example  Dockerfile  Dockerfile.base  Dockerfile.pyflakes  app.py  datastorage_pb2.py  datastorage_pb2_grpc.py  flakes.sh  grpc_app.py  logger_config.py  main.py  make_app.sh  make_base.sh  node_config.py  requirements.txt  rest_app.py  run.sh
services/orb/internal/: __init__.py  data_object.py  datastorage.proto  meta_object.py  orb_database_manager.py  orb_types.py  selftest.py  storage.py  utils.py
services/orb/tmp/: lunaricorn.tgz
services/portal/: Dockerfile  Dockerfile.base  app.py  build.sh  logger_config.py  main.py  make_app.sh  make_base.sh  pyproject.toml  requirements.txt  run.sh
services/portal/api/: cluster.py
services/portal/cfg/: config.yaml
services/portal/static/: index.html
services/portal/static/css/: app.css
services/portal/static/js/: app.js
services/signaling/: .gitignore  .native_env  .native_env_example  Dockerfile  Dockerfile.base  api_server.py  build.sh  logger_config.py  main.py  make_app.sh  make_base.sh  native_env.sh  native_run.sh  pyproject.toml  requirements.txt  run.sh  zmq_client.py  zmq_server.py
services/signaling/cfg/: config.yaml
services/signaling/internal/: __init__.py  data_types.py  message_storage.py  signaling.py  signaling_database_manager.py  test_message_storage.py
services/signaling/test_client/: ZeroMQSignalingClient.py  client.py  run.sh
services/signaling/test_client2/: app.py  run.sh  signaling_client.py
services/signaling_cpp/: Design.md  Dockerfile  Dockerfile.builder  Dockerfile.tester  TODO.md  it.sh  make_app.sh  make_base.sh  make_test.sh  message_storage.cpp  message_storage.h
services/signaling_cpp/app/: CMakeLists.txt  endpoint.h  event_data.cpp  event_data.h  event_data_extended_type_handler.cpp  event_data_extended_type_handler.h  http_endpoint.cpp  http_endpoint.h  main.cpp  message_storage.cpp  message_storage.h  raw_endpoint.cpp  raw_endpoint.h  raw_endpoint_client.cpp  raw_endpoint_client.h  signal_waiter.cpp  signal_waiter.h  signaling_engine.cpp  signaling_engine.h  stdafx.h  (+2 more)
services/signaling_cpp/cli/: CMakeLists.txt  main.cpp
services/test/: Dockerfile  Dockerfile.base  app.py  it.sh  make_app.sh  make_base.sh
(+10 files in other folders)
